# prob-theory-coursework

./: .gitignore
task1/: CMakeLists.txt  task1.cpp
task10/: CMakeLists.txt  task10.cpp
task11/: CMakeLists.txt  task11.cpp
task12/: CMakeLists.txt  task12.cpp
task13/: CMakeLists.txt  task13.cpp
task2/: CMakeLists.txt  task2.cpp
task3/: CMakeLists.txt  task3.cpp
task4/: CMakeLists.txt  task4.cpp
task5/: CMakeLists.txt  config.json  taks5.cpp
task6/: CMakeLists.txt  task6.cpp
task7/: CMakeLists.txt  task7.cpp
task8/: CMakeLists.txt  task8.cpp
task9/: CMakeLists.txt  task9.cpp
